# libfoo

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  program.cpp
cmake/: FetchFoo.cmake  FooConfig.cmake.in  maceConfig.cmake.in
examples/: CMakeLists.txt  example_01.cpp  main_example.cpp
fortran/: CMakeLists.txt  foo_f90_wrapper.f90  mace.f90
googletest/: CMakeLists.txt
googletest/cmake/: Config.cmake.in
include/: foo.h
include/mace/: mace.hpp
src/: CMakeLists.txt  foo.cpp  foo.h  main.cpp
tests/: CMakeLists.txt
